--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "typescript": "~5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.563.0",
+    "@aws-sdk/lib-dynamodb": "^3.563.0",
     "@types/aws-lambda": "^8.10.137",
     "aws-cdk-lib": "2.138.0",
     "constructs": "^10.0.0",
